--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -119,7 +119,7 @@ body {
     overflow: hidden;    
     font-family: 'Roboto', sans-serif;
     text-rendering: optimizeLegibility;
-    background-color: $a9;
+    background-color: $a6;
 }
 
 // MEMBER -------------------------------------------------------------------------------------------------------------------------------
@@ -274,6 +274,7 @@ body {
     // Closed
     width: 30px;
     height: 30px;
+    transition: height 1s, width 1s 1s;
 
     // Nav Tool
     // width: 300px;
@@ -282,6 +283,7 @@ body {
     // Navigation Panel
     // width: 300px;
     // height: calc(100% - 10px);
+    // transition: height 1s 1s, width 1s;
 
 
     overflow: clip;
@@ -290,7 +292,6 @@ body {
     top: 5px;
     right: 5px;
     z-index: 10;
-    transition: height 1s, width 1.5s;
 
     #navPanel {
         background: $a7;
@@ -441,8 +442,8 @@ body {
 
 }
 #userDash {
-    width: calc(100vw - 320px);
-    width: 100%;
+    width: calc(100vw - 325px);
+    // width: 100%;
 
     background: $t6;
     position: fixed;
@@ -656,7 +657,7 @@ body {
     // display: none;
 
     bottom: 50px;
-    bottom: -100%;
+    // bottom: -100%;
 
     position: absolute;
     overflow: hidden;
@@ -675,7 +676,7 @@ body {
 
     #adminConsoleDesk {
         width: calc(100% - 290px);
-        width: calc(100% - 30px);
+        // width: calc(100% - 30px);
 
         display: block;
         height: calc(100% - 20px);
@@ -704,7 +705,8 @@ body {
         left: 15px;
         top: 5px;
         border-radius: 4px;
-        background-color: $a3;
+        // background-color: $a3;
+        color: $a9;
         cursor: default;
     }
 }
@@ -773,7 +775,7 @@ body {
         display: grid;
         // display: none;
         position: absolute;
-        background-color: $a6;
+        background-color: $a7;
         width: 310px;
         top: 5px;
         height: calc(100% - 40px);
@@ -784,10 +786,10 @@ body {
         box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.4);
         grid-template-areas: "QTtabs" "QTtitle" "QTpanel";
         transition: background 1s;
-        &:hover {background-color: $a7;}
+        &:hover {background-color: $a8;}
         #quickToolsHead {
             grid-area: QTtabs;
-            background-color: $a4;
+            background-color: $a7;
             overflow: hidden;
             padding: 5px 0 0 5px;
             display: flex;
@@ -795,7 +797,7 @@ body {
                 height: 35px;
                 width: 30px;
                 display: inline-block;
-                background-color: $a1;
+                background-color: $a2;
                 position: relative;
                 bottom: -5px;
                 margin-right: 4px;
@@ -804,22 +806,22 @@ body {
                 transition: background .4s;
                 cursor: pointer;
                 &:hover {
-                    background-color: $a2;
+                    background-color: $a3;
                 }
             }
             .openTab {
-                background-color: $a2;
+                background-color: $a3;
                 bottom: 0;
                 width: 30px;
                 transition: background .4s;
                 &:hover {
-                    background-color: $a2;
+                    background-color: $a3;
                 }
             }
         }
         #quickToolsTitle {
             grid-area: QTtitle;
-            background-color: $a2;
+            background-color: $a3;
             line-height: 30px;
             padding: 0 0 0 5px;
             font-size: 16px;
@@ -835,7 +837,7 @@ body {
 }
 #adminFooter {
     bottom: 0;
-    bottom: -60px;
+    // bottom: -60px;
 
     
     background-color: $at1;
@@ -867,7 +869,7 @@ body {
         border-radius: 4px;
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: calc(100% - 40px) 40px;
+        grid-template-rows: calc(100% - 30px) 30px;
         grid-template-areas: "content" "button";
         &:hover {background-color: $at5;}
 
