--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -57,7 +57,7 @@ body {
   overflow: hidden;
   font-family: 'Roboto', sans-serif;
   text-rendering: optimizeLegibility;
-  background-color: #471f47;
+  background-color: #471f3a;
 }
 
 #userHeader {
@@ -86,7 +86,7 @@ body {
   -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   grid-area: thumbnail;
-  background-color: #ce8dce;
+  background-color: #ce8db8;
   overflow: hidden;
 }
 
@@ -166,23 +166,23 @@ body {
 }
 
 #userHeader #userProgress td:nth-child(37) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(38) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(39) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(40) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(41) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(42) {
@@ -202,79 +202,79 @@ body {
 }
 
 #userHeader #userProgress td:nth-child(49) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(50) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(51) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(52) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(53) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(54) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(55) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(56) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(57) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(58) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(59) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(60) {
-  background-color: #b654b6;
+  background-color: #dab82f;
 }
 
 #userHeader #userProgress td:nth-child(61) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(62) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(63) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(64) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(65) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(66) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(67) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(70) {
@@ -306,43 +306,43 @@ body {
 }
 
 #userHeader #userProgress td:nth-child(82) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(83) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(84) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(85) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(86) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(87) {
-  background-color: #b654b6;
+  background-color: #b65495;
 }
 
 #userHeader #userProgress td:nth-child(88) {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #userHeader #userProgress td:nth-child(89) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(90) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(91) {
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #userHeader #userProgress td:nth-child(92) {
@@ -445,7 +445,7 @@ body {
 }
 
 #navCrop #navPanel {
-  background: #c270c2;
+  background: #c270a7;
   width: 300px;
   height: calc(100vh - 10px);
   display: -ms-grid;
@@ -461,12 +461,12 @@ body {
 }
 
 #navCrop #navPanel:hover {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #navCrop #navButton {
   position: fixed;
-  background-color: #471f47;
+  background-color: #471f3a;
   right: 9px;
   top: 9px;
   width: 22px;
@@ -486,9 +486,9 @@ body {
 }
 
 #navCrop #navButton:hover {
-  background-color: #813781;
-  -webkit-box-shadow: 0 0 8px 2px #daa9da;
-          box-shadow: 0 0 8px 2px #daa9da;
+  background-color: #813768;
+  -webkit-box-shadow: 0 0 8px 2px #daa9ca;
+          box-shadow: 0 0 8px 2px #daa9ca;
 }
 
 #navCrop #navPage {
@@ -500,14 +500,14 @@ body {
   line-height: 22px;
   vertical-align: middle;
   padding: 0 0 0 5px;
-  background-color: #642b64;
+  background-color: #642b51;
   border-radius: 4px;
   border: none;
   position: absolute;
   right: 30px;
   width: 261px;
   z-index: 7;
-  color: #daa9da;
+  color: #daa9ca;
   letter-spacing: 1px;
   font-size: 14px;
   font-weight: 600;
@@ -532,7 +532,7 @@ body {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  background-color: #813781;
+  background-color: #813768;
   display: block;
   width: 260px;
   margin-left: 5px;
@@ -546,7 +546,7 @@ body {
 }
 
 #navCrop #navBody ul:hover {
-  background-color: #9d439d;
+  background-color: #9d437f;
 }
 
 #navCrop #navBody ul li {
@@ -556,9 +556,9 @@ body {
   border-radius: 4px;
   font-size: 14px;
   line-height: 20px;
-  background-color: #642b64;
+  background-color: #642b51;
   font-weight: 700;
-  color: #ce8dce;
+  color: #ce8db8;
   vertical-align: middle;
   cursor: pointer;
   letter-spacing: 1px;
@@ -567,14 +567,14 @@ body {
 }
 
 #navCrop #navBody ul li:hover {
-  background-color: #471f47;
-  color: #daa9da;
+  background-color: #471f3a;
+  color: #daa9ca;
 }
 
 #navCrop #navBody ul li:first-child {
   width: 250px;
-  background-color: #471f47;
-  color: #ce8dce;
+  background-color: #471f3a;
+  color: #ce8db8;
   margin: 0;
   font-weight: 8px;
   letter-spacing: 2px;
@@ -583,8 +583,8 @@ body {
 }
 
 #navCrop #navBody ul li:first-child:hover {
-  background-color: #2b122b;
-  color: #daa9da;
+  background-color: #2b1223;
+  color: #daa9ca;
 }
 
 #navCrop #navBody ul li:last-child {
@@ -599,18 +599,18 @@ body {
   border-radius: 4px;
   width: 15px;
   overflow-x: visible;
-  background-color: #9d439d;
+  background-color: #9d437f;
   cursor: pointer;
 }
 
 #navCrop #navBody::-webkit-scrollbar-button {
-  background-color: #813781;
+  background-color: #813768;
   border-radius: 4px 4px 0 0;
   height: 0;
 }
 
 #navCrop #navBody::-webkit-scrollbar-thumb {
-  background-color: #642b64;
+  background-color: #642b51;
   border-radius: 4px;
   -webkit-transition: background 1s;
   transition: background 1s;
@@ -638,7 +638,7 @@ body {
   top: -80vh;
   width: 250px;
   height: 45vh;
-  background-color: #b654b6;
+  background-color: #b65495;
   position: absolute;
   right: 5px;
   z-index: 8;
@@ -654,14 +654,14 @@ body {
 }
 
 #helpScreen:hover {
-  background-color: #ce8dce;
+  background-color: #ce8db8;
 }
 
 #helpScreen section:nth-child(1) {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: head;
-  background-color: #813781;
+  background-color: #813768;
   width: 100%;
   display: -ms-grid;
   display: grid;
@@ -690,7 +690,7 @@ body {
   -ms-grid-column: 2;
   grid-area: element;
   font-size: 14px;
-  color: #daa9da;
+  color: #daa9ca;
   letter-spacing: .5px;
   font-weight: 600;
   text-align: left;
@@ -701,12 +701,12 @@ body {
   -ms-grid-column: 3;
   grid-area: x;
   font-size: 14px;
-  color: #2b122b;
+  color: #2b1223;
   font-weight: 600;
   line-height: 20px;
   width: 20px;
   height: 20px;
-  background-color: #c270c2;
+  background-color: #c270a7;
   border-radius: 4px;
   margin: 5px;
   -webkit-transition: background 1s;
@@ -714,7 +714,7 @@ body {
 }
 
 #helpScreen section:nth-child(1) div:nth-child(3):hover {
-  background-color: #daa9da;
+  background-color: #daa9ca;
 }
 
 #helpScreen section:nth-child(2) {
@@ -837,7 +837,7 @@ body {
 #userConsole #userConsoleMeta ul li:nth-child(1) {
   background-color: #524c3d;
   margin: 0;
-  color: #cbc5b9;
+  color: white;
   padding: 5px;
   font-weight: 600;
   letter-spacing: 2px;
@@ -849,8 +849,40 @@ body {
   line-height: 12px;
   color: #524c3d;
   padding: 4px;
-  margin-top: 5px;
+  margin-top: 10px;
   border-radius: 4px;
+}
+
+#userConsole #userConsoleMeta ul li h5 {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  font-size: 12px;
+  padding: 2px;
+  background-color: #6a614e;
+  border-radius: 2px;
+  color: white;
+  font-weight: 600;
+  letter-spacing: 1px;
+  line-height: 14px;
+  vertical-align: middle;
+  margin: 5px 0 5px 0;
+}
+
+#userConsole #userConsoleMeta ul li h6 {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  font-size: 12px;
+  padding: 2px;
+  background-color: #a89f8a;
+  border-radius: 2px;
+  color: #23201a;
+  font-weight: 600;
+  letter-spacing: .5px;
+  line-height: 14px;
+  vertical-align: middle;
+  margin: 5px 0 5px 0;
 }
 
 #userConsole #userConsoleHelp {
@@ -861,7 +893,7 @@ body {
   left: 20px;
   bottom: 5px;
   width: 240px;
-  background-color: #ce8dce;
+  background-color: #ce8db8;
   border-radius: 4px;
   z-index: inherit;
   overflow: hidden;
@@ -888,7 +920,7 @@ body {
 }
 
 #userConsole #userConsoleHelp #userConsoleHelpButton {
-  background-color: #813781;
+  background-color: #813768;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: button;
@@ -899,8 +931,8 @@ body {
   display: -ms-grid;
   display: grid;
   border-radius: 4px;
-  -webkit-box-shadow: 0 0 0 5px #ce8dce;
-          box-shadow: 0 0 0 5px #ce8dce;
+  -webkit-box-shadow: 0 0 0 5px #ce8db8;
+          box-shadow: 0 0 0 5px #ce8db8;
   -webkit-transition: background 1s;
   transition: background 1s;
   -ms-grid-columns: 20px 235px;
@@ -909,7 +941,7 @@ body {
 }
 
 #userConsole #userConsoleHelp #userConsoleHelpButton:hover {
-  background-color: #9d439d;
+  background-color: #9d437f;
 }
 
 #userConsole #userConsoleHelp #userConsoleHelpButton span {
@@ -920,12 +952,12 @@ body {
 #userConsole #userConsoleHelp #userConsoleHelpButton span:nth-child(1) {
   text-align: center;
   font-size: 18px;
-  color: #c270c2;
+  color: #c270a7;
 }
 
 #userConsole #userConsoleHelp #userConsoleHelpButton span:nth-child(2) {
   text-align: left;
-  color: #daa9da;
+  color: #daa9ca;
   font-size: 14px;
   letter-spacing: 1px;
 }
@@ -936,7 +968,7 @@ body {
   height: 25px;
   width: 25px;
   position: absolute;
-  background-color: #9d439d;
+  background-color: #9d437f;
   cursor: pointer;
   border-radius: 4px;
   -webkit-transition: background 1s;
@@ -944,7 +976,7 @@ body {
 }
 
 #userConsole #userConsoleClose:hover {
-  background-color: #c270c2;
+  background-color: #c270a7;
 }
 
 #helperDesk {
@@ -962,7 +994,7 @@ body {
 }
 
 #helperDesk .helperChatWindow {
-  background-color: #813781;
+  background-color: #813768;
   display: -ms-grid;
   display: grid;
   width: 200px;
@@ -984,7 +1016,7 @@ body {
 
 #helperDesk .helperChatWindow section:nth-child(1) {
   display: block;
-  background-color: #642b64;
+  background-color: #642b51;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: head;
@@ -994,7 +1026,7 @@ body {
 }
 
 #helperDesk .helperChatWindow section:nth-child(1):nth-child(1):hover {
-  background-color: #9d439d;
+  background-color: #9d437f;
 }
 
 #helperDesk .helperChatWindow section:nth-child(2) {
@@ -1012,7 +1044,7 @@ body {
 }
 
 #helperDesk .helperChatWindow:hover {
-  background-color: #9d439d;
+  background-color: #9d437f;
 }
 
 #sidebar {
@@ -1031,7 +1063,7 @@ body {
   display: -ms-grid;
   display: grid;
   position: absolute;
-  background-color: #ce8dce;
+  background-color: #ce8db8;
   width: 310px;
   top: 10px;
   border-radius: 4px;
@@ -1050,7 +1082,7 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: TKtabs;
-  background-color: #c270c2;
+  background-color: #c270a7;
   overflow: hidden;
   padding: 5px 0 0 5px;
   display: -webkit-box;
@@ -1062,7 +1094,7 @@ body {
   height: 35px;
   width: 30px;
   display: inline-block;
-  background-color: #471f47;
+  background-color: #471f3a;
   position: relative;
   bottom: -5px;
   margin-right: 4px;
@@ -1074,11 +1106,11 @@ body {
 }
 
 #sidebar #toolkit #toolkitHead span:hover {
-  background-color: #642b64;
+  background-color: #642b51;
 }
 
 #sidebar #toolkit #toolkitHead .openTab {
-  background-color: #642b64;
+  background-color: #642b51;
   bottom: 0;
   width: 30px;
   -webkit-transition: background .4s;
@@ -1086,14 +1118,14 @@ body {
 }
 
 #sidebar #toolkit #toolkitHead .openTab:hover {
-  background-color: #642b64;
+  background-color: #642b51;
 }
 
 #sidebar #toolkit #toolkitTitle {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: TKtitle;
-  background-color: #642b64;
+  background-color: #642b51;
   line-height: 30px;
   padding: 0 0 0 5px;
   font-size: 16px;
@@ -1106,7 +1138,7 @@ body {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: TKprogress;
-  background-color: #813781;
+  background-color: #813768;
 }
 
 #sidebar #toolkit #toolkitProgress #toolkitProgressBar {
